--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-865.2KB/s(Youtube:不良林), server: 217.30.10.65, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林), server: 213.183.53.198, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇨🇦 加拿大-390.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-545.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-937.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-390.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 波兰-545.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
