--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-545.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.114.114.69, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-937.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
-      - 波兰-545.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
