--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.114.114.69, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-192.1KB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-282.9KB/s(Youtube:不良林), server: 38.75.136.21, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-302.4KB/s(Youtube:不良林), server: 38.114.114.19, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 38.114.114.67, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-345.7KB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-937.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
