--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-192.1KB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-282.9KB/s(Youtube:不良林), server: 38.75.136.21, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-302.4KB/s(Youtube:不良林), server: 38.114.114.19, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 38.114.114.67, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 38.114.114.67, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 波兰-865.2KB/s(Youtube:不良林), server: 217.30.10.65, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-319.5KB/s(Youtube:不良林), server: 213.183.51.172, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇺🇸 美国-944.6KB/s(Youtube:不良林), server: 38.64.138.145, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-602.7KB/s(Youtube:不良林), server: 38.114.114.69, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-345.7KB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-937.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-726.0KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 波兰-865.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
 rules:
