--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 38.114.114.67, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 波兰-865.2KB/s(Youtube:不良林), server: 217.30.10.65, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-319.5KB/s(Youtube:不良林), server: 213.183.51.172, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-944.6KB/s(Youtube:不良林), server: 38.64.138.145, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-602.7KB/s(Youtube:不良林), server: 38.114.114.69, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-345.7KB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.44MB/s(Youtube:不良林), server: 85.208.108.18, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-318.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-1012.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-578.9KB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-726.0KB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 波兰-865.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-319.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-602.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-973.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-726.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
